style: fix spacing of buttons

--- a/client/src/styles/CreateChannel.scss
+++ b/client/src/styles/CreateChannel.scss
@@ -17,6 +17,20 @@
     }
   }
 
+  .create-channel__button-wrapper {
+    @include flex-center();
+    width: 100%;
+    justify-content: center;
+
+    button {
+      background-color: $accent-color;
+      color: $background-color;
+      font-weight: bold;
+      letter-spacing: 0.5px;
+      margin-bottom: 30px;
+    }
+  }
+
   .channel-name-input__wrapper {
     display: flex;
     flex-direction: column;
