--- a/client/src/styles/TeamChannelList.scss
+++ b/client/src/styles/TeamChannelList.scss
@@ -2,7 +2,7 @@
 @import "./mixins";
 
 .team-channel-list {
-  width: 100%;
+  width: 20vw;
   display: flex;
   flex-direction: column;
 
